deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: junjun-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: junjun-app
  template:
    metadata:
      labels:
        app: junjun-app
    spec:
      containers:
      - name: junjun-container
        image: hojun5513/junjunbaristudio-web:latest
        ports:
        - containerPort: 80
