postgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service  # 새로운 DB 서비스 이름
spec:
  selector:
    app: postgres-master  # Postgres DB Pod을 선택하는 라벨
  ports:
  - protocol: TCP
    port: 5432  # PostgreSQL의 기본 포트
    targetPort: 5432  # 컨테이너 내부의 DB 포트
  type: ClusterIP  # 클러스터 내부에서만 접근 가능
