service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junjun-service
spec:
  selector:
    app: junjun-app
  ports:
  - protocol: TCP
    port: 80  # 외부에서 접근할 포트
    targetPort: 80  # 컨테이너 내부에서 사용하는 포트
  type: ClusterIP
